tests/negative/Test16.sp
(* Testing wrong refinement *)
sample_normal   :  Double   (mean:Double,  stddev : Double   where   stddev != 1a);
